--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
         <hibernate.version>5.4.2.Final</hibernate.version>
         <mysql.connector.version>8.0.15</mysql.connector.version>
         <tomcat.dbConnectionPool>9.0.1</tomcat.dbConnectionPool>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -53,8 +55,27 @@
             <version>${logback.version}</version>
             <scope>compile</scope>
         </dependency>
-    </dependencies>
 
+        <!--test-->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>5.1.0</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-engine</artifactId>
+            <version>1.5.0-M1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>2.25.1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <plugins>
@@ -68,5 +89,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
