--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,8 @@
 .idea/**/dbnavigator.xml
 
 logs/
+.idea/
+
 
 # Gradle
 .idea/**/gradle.xml
@@ -76,7 +78,7 @@ fabric.properties
 ### Intellij Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 
-# *.iml
+*.iml
  modules.xml
  .idea/misc.xml
  *.ipr
