--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
     <properties>
         <java.version>1.8</java.version>
-        <logback.version>1.3.0-alpha4</logback.version>
+        <logback.version>1.2.3</logback.version>
         <spring.version>5.1.5.RELEASE</spring.version>
         <hibernate.version>5.4.2.Final</hibernate.version>
         <mysql.connector.version>8.0.15</mysql.connector.version>
@@ -39,16 +39,6 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework</groupId>-->
-<!--            <artifactId>spring-orm</artifactId>-->
-<!--        </dependency>-->
-        <!--Spring context-->
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-context</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
 
         <!--DB-->
         <dependency>
@@ -71,6 +61,11 @@
             <artifactId>tomcat-dbcp</artifactId>
             <version>${tomcat.dbConnectionPool}</version>
         </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
+        </dependency>
 
         <!--logging-->
         <dependency>
@@ -81,12 +76,12 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.3</version>
+            <version>${logback.version}</version>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-core</artifactId>
-            <version>1.2.3</version>
+            <version>${logback.version}</version>
         </dependency>
 
         <!--test-->
@@ -109,12 +104,6 @@
             <scope>test</scope>
         </dependency>
 
-        <!--Thymeleaf-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-
         <!--Utilities-->
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -126,20 +115,6 @@
             <artifactId>openjson</artifactId>
             <version>1.0.10</version>
         </dependency>
-        <dependency>
-            <groupId>javax.persistence</groupId>
-            <artifactId>javax.persistence-api</artifactId>
-            <version>2.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.jboss.spec.javax.transaction</groupId>
-            <artifactId>jboss-transaction-api_1.2_spec</artifactId>
-            <version>1.1.1.Final</version>
-        </dependency>
-        <!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-security</artifactId>-->
-<!--        </dependency>-->
     </dependencies>
 
     <build>
